--- a/arch/arm/dts/x5-soc.dtsi
+++ b/arch/arm/dts/x5-soc.dtsi
@@ -65,6 +65,7 @@
 			status = "okay";
 			max-frequency = <50000000>;
 			cap-mmc-highspeed;
+			emmc-socrst;
 			// mmc-hs200-1_8v;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_emmc>;
@@ -77,6 +78,7 @@
 			max-frequency = <52000000>;
 			no-1-8-v;
 			no-sdio;
+			sd-socrst;
 			status = "okay";
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_sd>;
@@ -89,6 +91,7 @@
 			max-frequency = <52000000>;
 			no-1-8-v;
 			no-sdio;
+			sdio-socrst;
 			status = "disabled";
 		};
 
