eth: dts: feat [X5-364] Add ethernet device node for sunrise5 platform.
- We need customize some operation for sunrise5 chip.
- For example, we need do phy-reset in uboot stage.
- Then we need add specified operation.

Change-Id: Iba797c818ccbad6e502eed5197067a3ad80932a8
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm/dts/x5-soc.dtsi
+++ b/arch/arm/dts/x5-soc.dtsi
@@ -96,7 +96,7 @@
 		};
 
 		x5_soc_ethernet_tsn: gmac-tsn@35010000 {
-			compatible = "horizon,stm32mp1-dwmac";
+			compatible = "horizon,sunrise5-dwmac";
 			status = "okay";
 			reg = <0x35010000 0x10000>;
 			reg-names = "stmmaceth";
