--- a/arch/arm/dts/x5.dtsi
+++ b/arch/arm/dts/x5.dtsi
@@ -41,6 +41,17 @@
 		pmic_type = "dual-pmic", "single-pmic";
 	};
 
+	lsio_iomuxc: lsio_iomuxc@34180000 {
+		compatible = "d-robotics,horizon-lsio-iomuxc";
+		reg = <0x34180000 0x200>;
+	};
+
+	hsio_iomuxc: hsio_iomuxc@35050000 {
+		compatible = "d-robotics,horizon-hsio-iomuxc";
+		reg = <0x35050000 0x200>,	/* iomux */
+				<0x31040040 0x4>;	/* mode select */
+	};
+
 	reg_adc_vref_1v8: regulator-1v8 {
 		compatible = "regulator-fixed";
 		regulator-name = "adc_1v8";
