--- a/configs/hobot_x5_auto_defconfig
+++ b/configs/hobot_x5_auto_defconfig
@@ -117,6 +117,8 @@ CONFIG_DM_MDIO=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_DWC_ETH_QOS_STM32=y
 CONFIG_RGMII=y
+CONFIG_PINCTRL=y
+CONFIG_PINCTRL_HORIZON=y
 CONFIG_DM_REGULATOR=y
 CONFIG_DM_REGULATOR_FIXED=y
 CONFIG_SPECIFY_CONSOLE_INDEX=y
