--- a/configs/hobot_x5_evb_nand_defconfig
+++ b/configs/hobot_x5_evb_nand_defconfig
@@ -116,6 +116,8 @@ CONFIG_DM_MDIO=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_DWC_ETH_QOS_STM32=y
 CONFIG_RGMII=y
+CONFIG_PINCTRL=y
+CONFIG_PINCTRL_HORIZON=y
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_DM_SERIAL=y
 CONFIG_SYS_NS16550=y
