eth: dts: feat [X5-364] Add x5-svb.dtsi to separate some different board.
- Current for enet config.
- SVB & EVK boards have different phy-reset gpio pin.
- Then we need different dts for these two boards.

Change-Id: I08ecd313515710719b1eddf49e5f524a6d57f6b3
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm/dts/x5.dtsi
+++ b/arch/arm/dts/x5.dtsi
@@ -52,6 +52,11 @@
 				<0x31040040 0x4>;	/* mode select */
 	};
 
+	lsio_sys_con: syscon@34180000 {
+		compatible = "syscon";
+		reg = <0x34180000 0x10000>;
+	};
+
 	reg_adc_vref_1v8: regulator-1v8 {
 		compatible = "regulator-fixed";
 		regulator-name = "adc_1v8";
@@ -147,4 +152,5 @@
 
 };
 #include "x5-fpga.dtsi"
+#include "x5-svb.dtsi"
 #include "x5-soc.dtsi"
