--- a/arch/arm/dts/x5-svb.dtsi
+++ b/arch/arm/dts/x5-svb.dtsi
@@ -1,9 +1,9 @@
 #include "pinmux-func.dtsi"
 
 &board_dts {
-	board_x5_soc {
+	board_x5_svb {
 		compatible = "btype-bus";
-		model = "X5 SOC Board";
+		model = "X5 SVB Board";
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
@@ -11,11 +11,10 @@
 		btype-dev = &board_type;
 		supported-btype =
 			<
-			HOBOT_X5_SOC_ID
-			HOBOT_X5_EVB_ID
+			HOBOT_X5_SVB_ID
 			>;
 
-		x5_soc_uart1: serial@34070000 {
+		x5_svb_uart1: serial@34070000 {
 			compatible = "ns16550a";
 			reg = <0x34070000 0x10000>;
 			clock-frequency = <UART_CLK_FREQ>;
@@ -25,7 +24,7 @@
 			status = "disabled";
 		};
 
-		x5_soc_qspi1: spi@35000000 {
+		x5_svb_qspi1: spi@35000000 {
 			status = "okay";
 			compatible = "snps,dwc-ssi-1.01a";
 			reg = <0x35000000 0x1000>;
@@ -37,7 +36,7 @@
 			#size-cells = <0>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_qspi>;
-			x5_soc_nand: spi-flash@0 {
+			x5_svb_nand: spi-flash@0 {
 				compatible = "spi-nand";
 				rx-sample-delay-ns = <10>;
 				spi-max-frequency = <100000000>;
@@ -45,7 +44,7 @@
 			};
 		};
 
-		x5_soc_emmc: sdio-host@35040000 {
+		x5_svb_emmc: sdio-host@35040000 {
 			compatible = "horizon,x5-sdhci";
 			reg = <0x35040000 0x10000>;
 			clocks = <&sdclk>;
@@ -65,7 +64,7 @@
 			pinctrl-0 = <&pinctrl_emmc>;
 		};
 
-		x5_soc_sdio_0: sdio-host@35020000 {
+		x5_svb_sdio_0: sdio-host@35020000 {
 			compatible = "horizon,x5-sdhci";
 			reg = <0x35020000 0x10000>;
 			clocks = <&sdclk>;
@@ -78,7 +77,7 @@
 			pinctrl-0 = <&pinctrl_sd>;
 		};
 
-		x5_soc_sdio_1: sdio-host@35030000 {
+		x5_svb_sdio_1: sdio-host@35030000 {
 			compatible = "horizon,x5-sdhci";
 			reg = <0x35030000 0x10000>;
 			clocks = <&sdclk>;
@@ -89,7 +88,7 @@
 			status = "disabled";
 		};
 
-		x5_soc_ethernet_tsn: gmac-tsn@35010000 {
+		x5_svb_ethernet_tsn: gmac-tsn@35010000 {
 			compatible = "horizon,sunrise5-dwmac";
 			status = "okay";
 			reg = <0x35010000 0x10000>;
@@ -105,7 +104,7 @@
 				<&refclk>,
 				<&refclk>;
 			phy-mode = "rgmii-txid";
-			phy-handle = <&x5_soc_ethphy0>;
+			phy-handle = <&x5_svb_ethphy0>;
 			max-speed = <100>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_enet &pinctrl_lsio_gpio0_29>;
@@ -115,7 +114,7 @@
 				#address-cells = <1>;
 				#size-cells = <0>;
 
-				x5_soc_ethphy0: ethernet-phy@1 {
+				x5_svb_ethphy0: ethernet-phy@1 {
 					compatible = "ethernet-phy-ieee802.3-c22";
 					reg = <1>;
 					max-frequency = <25000000>;
@@ -123,7 +122,7 @@
 			};
 		};
 
-		x5_soc_dwc3_usb3_host: usb_host@35100000 {
+		x5_svb_dwc3_usb3_host: usb_host@35100000 {
 			compatible = "snps,dwc3";
 			status = "disabled";
 			reg = <0x35100000 0x10000>;
@@ -140,7 +139,7 @@
 			clock-names = "ref", "bus_early", "suspend";
 		};
 
-		x5_soc_dwc3_usb2_host: usb_host@35300000 {
+		x5_svb_dwc3_usb2_host: usb_host@35300000 {
 			compatible = "snps,dwc3";
 			status = "disabled";
 			reg = <0x35300000 0x10000>;
@@ -155,7 +154,7 @@
 			clock-names = "ref", "bus_early", "suspend";
 		};
 
-		x5_soc_usb2_0: usb@35300000 {
+		x5_svb_usb2_0: usb@35300000 {
 			compatible = "horizon,sunrise5-dwc3";
 			reg = <0x35410000 0x2000>;
 			reg-names = "usb2-csr-base";
@@ -164,7 +163,7 @@
 			#size-cells = <2>;
 			status = "okay";
 
-			x5_soc_dwc3_usb2_dev: usb_otg@35300000 {
+			x5_svb_dwc3_usb2_dev: usb_otg@35300000 {
 				compatible = "snps,dwc3";
 				status = "okay";
 				reg = <0x0 0x35300000 0x0 0x10000>;
@@ -181,7 +180,7 @@
 			};
 		};
 
-		x5_soc_usb3_0: usb@35100000 {
+		x5_svb_usb3_0: usb@35100000 {
 			compatible = "horizon,sunrise5-dwc3";
 			reg = <0x35210000 0x2000>;
 			reg-names = "usb3-csr-base";
@@ -190,7 +189,7 @@
 			#size-cells = <2>;
 			status = "okay";
 
-			x5_soc_dwc3_usb3_dev: usb_otg@35100000 {
+			x5_svb_dwc3_usb3_dev: usb_otg@35100000 {
 				compatible = "snps,dwc3";
 				status = "okay";
 				reg = <0x0 0x35100000 0x0 0x10000>;
