eth: dts: feat [X5-364] Set gpio0_31 as output normal for enet phy-reset pin.
- Refer to lsio_gpio0_31 pin as phy-reset pin for ethernet.
- Phy-reset assert & deassert operation will be applied later.

Change-Id: Ic9a7eaba73e6e419c58d3696191c0995625d7aa5
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm/dts/pinmux-func.dtsi
+++ b/arch/arm/dts/pinmux-func.dtsi
@@ -422,6 +422,12 @@
 		>;
 	};
 
+	pinctrl_lsio_gpio0_31_output_normal: lsiogpio0grp12 {
+		horizon,pins = <
+			LSIO_SPI4_MOSI	LSIO_PINMUX_2	BIT_OFFSET6	MUX_ALT1	&pconf_output_normal
+		>;
+	};
+
 	pinctrl_lsio_gpio0_4: lsiogpio0grp13 {
 		horizon,pins = <
 			LSIO_UART1_RX   LSIO_PINMUX_3 BIT_OFFSET12      MUX_ALT2        &pconf_input_en
