--- a/arch/arm/dts/x5-svb.dtsi
+++ b/arch/arm/dts/x5-svb.dtsi
@@ -103,9 +103,9 @@
 				<&refclk>,
 				<&refclk>,
 				<&refclk>;
-			phy-mode = "rgmii-txid";
+			phy-mode = "rgmii-id";
 			phy-handle = <&x5_svb_ethphy0>;
-			max-speed = <100>;
+			max-speed = <1000>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_enet &pinctrl_lsio_gpio0_29>;
 
@@ -117,7 +117,7 @@
 				x5_svb_ethphy0: ethernet-phy@1 {
 					compatible = "ethernet-phy-ieee802.3-c22";
 					reg = <1>;
-					max-frequency = <25000000>;
+					max-frequency = <125000000>;
 				};
 			};
 		};
