configs: fix [X5-8] Enable adc and partition type guid in nand configs
Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: I5969e42847059de14a556dc9f4132a79ba570093

--- a/configs/hobot_x5_evb_nand_defconfig
+++ b/configs/hobot_x5_evb_nand_defconfig
@@ -42,6 +42,7 @@ CONFIG_ANDROID_AB=y
 CONFIG_MEMDUMP=y
 CONFIG_HUSH_PARSER=y
 CONFIG_CMD_MEMTEST=y
+CONFIG_CMD_ADC=y
 CONFIG_CMD_DFU=y
 CONFIG_CMD_DM=y
 CONFIG_CMD_GPT=y
@@ -72,6 +73,7 @@ CONFIG_CMD_AVB=y
 CONFIG_CMD_MEMDUMP=y
 CONFIG_CMD_UBI=y
 CONFIG_CMD_UBI_RENAME=y
+CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_OF_CONTROL=y
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_NET_RETRY_COUNT=20
@@ -80,6 +82,7 @@ CONFIG_DM=y
 CONFIG_DM_EVENT=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
+CONFIG_GUC_ADC=y
 CONFIG_CLK=y
 CONFIG_DFU_MMC=y
 CONFIG_DFU_RAM=y
@@ -118,6 +121,8 @@ CONFIG_DWC_ETH_QOS_STM32=y
 CONFIG_RGMII=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_HORIZON=y
+CONFIG_DM_REGULATOR=y
+CONFIG_DM_REGULATOR_FIXED=y
 CONFIG_SPECIFY_CONSOLE_INDEX=y
 CONFIG_DM_SERIAL=y
 CONFIG_SYS_NS16550=y
@@ -146,7 +151,7 @@ CONFIG_USB_GADGET_PRODUCT_NUM=0x0530
 CONFIG_DESIGNWARE_WATCHDOG=y
 CONFIG_WDT=y
 CONFIG_HOBOT_BOARD_TYPE=y
-CONFIG_HOBOT_X5_EVB=y
+CONFIG_HOBOT_ADC_BTYPE=y
 CONFIG_FAT_WRITE=y
 CONFIG_LIBAVB=y
 # CONFIG_EFI_LOADER is not set
