spi-nor: feat [X5-8] Support nor boot
1. Add NOR defconfig
2. boot image in NOR using UBI format
3. The configuration of NOR and NAND is distinguished by CONFIG_DM_SPI_FLASH
 enable CONFIG_DM_SPI_FLASH -> NOR
 disable CONFIG_DM_SPI_FLASH -> NAND

Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: Ib3be61b9199576877a2e400522345cfcf0a93ead

--- a/configs/hobot_x5_auto_defconfig
+++ b/configs/hobot_x5_auto_defconfig
@@ -49,6 +49,7 @@ CONFIG_CMD_GPT_EXTEND=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_PART=y
+CONFIG_CMD_SF=y
 CONFIG_CMD_SF_TEST=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
@@ -102,7 +103,7 @@ CONFIG_MMC_SDHCI_X5=y
 CONFIG_MTD=y
 CONFIG_DM_MTD=y
 CONFIG_MTD_SPI_NAND=y
-CONFIG_DM_SPI_FLASH=y
+CONFIG_SPI_FLASH=y
 CONFIG_SF_DEFAULT_SPEED=50000000
 CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_GIGADEVICE=y
