--- a/arch/arm/dts/x5-soc.dtsi
+++ b/arch/arm/dts/x5-soc.dtsi
@@ -37,12 +37,21 @@
 			#size-cells = <0>;
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_qspi>;
-			x5_soc_nand: spi-flash@0 {
-				compatible = "spi-nand";
-				rx-sample-delay-ns = <10>;
+#ifdef CONFIG_DM_SPI_FLASH
+			x5_soc_nor: spi-flash@0 {
+				compatible = "jedec,spi-nor";
 				spi-max-frequency = <50000000>;
+				rx-sample-delay-ns = <10>;
 				reg = <0>;
 			};
+#else
+			x5_soc_nand: spi-flash@0 {
+				compatible = "spi-nand";
+				spi-max-frequency = <50000000>;
+				rx-sample-delay-ns = <10>;
+				reg = <0>;
+			};
+#endif
 		};
 
 		x5_soc_emmc: sdio-host@35040000 {
