--- a/configs/hobot_x5_evb_nor_defconfig
+++ b/configs/hobot_x5_evb_nor_defconfig
@@ -49,7 +49,6 @@ CONFIG_CMD_GPT_EXTEND=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_PART=y
-CONFIG_CMD_SF=y
 CONFIG_CMD_SF_TEST=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
@@ -65,7 +64,7 @@ CONFIG_CMD_EXT4=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FAT=y
 CONFIG_CMD_MTDPARTS=y
-CONFIG_MTDIDS_DEFAULT="spi-nand0=spi7.0"
+CONFIG_MTDIDS_DEFAULT="nor0=spi7.0"
 CONFIG_MTDPARTS_DEFAULT="spi7.0"
 CONFIG_CMD_LOG=y
 CONFIG_CMD_AVB=y
@@ -104,8 +103,7 @@ CONFIG_MMC_SDHCI_SDMA=y
 CONFIG_MMC_SDHCI_X5=y
 CONFIG_MTD=y
 CONFIG_DM_MTD=y
-CONFIG_MTD_SPI_NAND=y
-CONFIG_SPI_FLASH=y
+CONFIG_DM_SPI_FLASH=y
 CONFIG_SF_DEFAULT_SPEED=50000000
 CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_GIGADEVICE=y
