--- a/arch/arm/dts/x5-soc.dtsi
+++ b/arch/arm/dts/x5-soc.dtsi
@@ -27,7 +27,7 @@
 
 		x5_soc_qspi1: spi@35000000 {
 			status = "okay";
-			compatible = "snps,dwc-ssi-1.01a";
+			compatible = "snps,dwc-ssi-2.00a";
 			reg = <0x35000000 0x1000>;
 			clocks = <&qspiclk>;
 			spi-max-frequency = <50000000>;
@@ -40,6 +40,8 @@
 #ifdef CONFIG_DM_SPI_FLASH
 			x5_soc_nor: spi-flash@0 {
 				compatible = "jedec,spi-nor";
+				spi-tx-bus-width = <4>;
+				spi-rx-bus-width = <4>;
 				spi-max-frequency = <50000000>;
 				rx-sample-delay-ns = <10>;
 				reg = <0>;
@@ -47,6 +49,8 @@
 #else
 			x5_soc_nand: spi-flash@0 {
 				compatible = "spi-nand";
+				spi-tx-bus-width = <4>;
+				spi-rx-bus-width = <4>;
 				spi-max-frequency = <50000000>;
 				rx-sample-delay-ns = <10>;
 				reg = <0>;
