fastboot: spinand: feat [X5-714] enable fastboot for spinand flash.
- Mainline uboot only support emmc & raw-nand flash fastboot.
- But don't support spinand flash fastboot.

- This patch is for spinand flash fastboot.
- Change choise to menu for mmc, nand, spinand, ram fastboot medium support.
- User could enable them, and all of them could be supported now.

Change-Id: Iff670e654009e61f77a0e6783ac62e0696e6e4b2
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/drivers/fastboot/Kconfig
+++ b/drivers/fastboot/Kconfig
@@ -72,7 +72,7 @@ config FASTBOOT_USB_DEV
 config FASTBOOT_FLASH
 	bool "Enable FASTBOOT FLASH command"
 	default y if ARCH_SUNXI || ARCH_ROCKCHIP
-	depends on MMC || (MTD_RAW_NAND && CMD_MTDPARTS)
+	depends on MMC || (MTD_RAW_NAND && CMD_MTDPARTS)|| MTD_SPI_NAND
 	select IMAGE_SPARSE
 	help
 	  The fastboot protocol includes a "flash" command for writing
@@ -87,8 +87,7 @@ config FASTBOOT_UUU_SUPPORT
 	  including working with memory and may open a huge backdoor,
 	  when enabling this option.
 
-choice
-	prompt "Flash provider for FASTBOOT"
+menu "Flash provider for FASTBOOT"
 	depends on FASTBOOT_FLASH
 
 config FASTBOOT_FLASH_MMC
@@ -99,10 +98,14 @@ config FASTBOOT_FLASH_NAND
 	bool "FASTBOOT on NAND"
 	depends on MTD_RAW_NAND && CMD_MTDPARTS
 
+config FASTBOOT_FLASH_SPINAND
+	bool "FASTBOOT on SPI NAND"
+	depends on MTD_SPI_NAND && CMD_MTDPARTS
+
 config FASTBOOT_FLASH_RAM
 	bool "FASTBOOT on RAM"
 
-endchoice
+endmenu
 
 config FASTBOOT_FLASH_MMC_DEV
 	int "Define FASTBOOT MMC FLASH default device"
