config: fb_spinand: feat [X5-714] Enable emmc, ram and spinand medium for fastboot.
- emmc, spinand & ram are tested.
- all basically worked.
- some examples:
1. emmc,
   fastboot 0

   host>>
   fastboot flash addr:0x0 emmc_disk.simg

2. spinand
   fastboot -t spinand 0

   host>>
   fastboot flash addr:0x0 spinand.img
3. ram
   fastboot -t ram 0

   host>>
   fastboot flash 0x90000000 boot.img		# use argument to indicate the target ram pisition.

Change-Id: I1689e5663f0dc2f2152d2cae6af33fdcec0832c5
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/configs/hobot_x5_auto_defconfig
+++ b/configs/hobot_x5_auto_defconfig
@@ -89,6 +89,9 @@ CONFIG_USB_FUNCTION_FASTBOOT=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x90000000
 CONFIG_FASTBOOT_FLASH=y
+CONFIG_FASTBOOT_FLASH_MMC=y
+CONFIG_FASTBOOT_FLASH_SPINAND=y
+CONFIG_FASTBOOT_FLASH_RAM=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_RAMDUMP=y
 CONFIG_DM_I2C=y
