--- a/configs/hobot_x5_soc_defconfig
+++ b/configs/hobot_x5_soc_defconfig
@@ -89,6 +89,9 @@ CONFIG_USB_FUNCTION_FASTBOOT=y
 CONFIG_UDP_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x90000000
 CONFIG_FASTBOOT_FLASH=y
+CONFIG_FASTBOOT_FLASH_MMC=y
+CONFIG_FASTBOOT_FLASH_SPINAND=y
+CONFIG_FASTBOOT_FLASH_RAM=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_RAMDUMP=y
 CONFIG_DM_I2C=y
