fix(ubootenv): [X5-963] Configure uboot env size and offset
Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: Ic433908aae33ec3ff441ed7357fe34771930d532

--- a/configs/hobot_x5_fpga_defconfig
+++ b/configs/hobot_x5_fpga_defconfig
@@ -5,8 +5,8 @@ CONFIG_ARCH_HORIZON=y
 CONFIG_SYS_TEXT_BASE=0x88000000
 CONFIG_SYS_MALLOC_LEN=0x4000000
 CONFIG_TARGET_X5=y
-CONFIG_ENV_SIZE=0x100000
-CONFIG_ENV_OFFSET=0x887000
+CONFIG_ENV_SIZE=0x30000
+CONFIG_ENV_OFFSET=0x0
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="hobot-x5"
 CONFIG_SYS_PROMPT="Hobot>"
