fastboot: oem command: feat [X5-996] Add "oem set_medium" command for fastboot.
- We need to indicate the flash type and number.
- Then add "oem set_medium" command.
- for example:
	fastboot oem set_medium:mmc0		# flash mmc0
	fastboot oem set_medium:mmc1		# flash mmc1
	fastboot oem set_medium:spinand0	# flash spinand0
	......
- Actually, currently, we only support indicate mmc or spinand medium.

Change-Id: I8bef0e577cdaa638a09bb8cd583945b361f59925
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/drivers/fastboot/Kconfig
+++ b/drivers/fastboot/Kconfig
@@ -231,6 +231,16 @@ config FASTBOOT_CMD_OEM_RAMDUMP
 	  could help to dump indicated/whole dram data to host pc through
 	  fastboot oem command.
 
+config FASTBOOT_CMD_OEM_SET_MEDIUM
+	bool "Enable the 'oem set_medium' command"
+	help
+	  Add support for the "oem set_medium" command from a client. This
+	  could help to set the flash medium type and number. Then it is
+	  flexible to flash the indicated medium.
+	  eg. "fastboot oem set_medium emmc0"
+	      "fastboot oem set_medium emmc1"
+	      "fastboot oem set_medium spinand0"
+
 endif # FASTBOOT
 
 endmenu
