--- a/configs/hobot_x5_evb_nor_defconfig
+++ b/configs/hobot_x5_evb_nor_defconfig
@@ -94,6 +94,7 @@ CONFIG_FASTBOOT_FLASH_MMC=y
 CONFIG_FASTBOOT_FLASH_RAM=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_FASTBOOT_CMD_OEM_RAMDUMP=y
+CONFIG_FASTBOOT_CMD_OEM_SET_MEDIUM=y
 CONFIG_DM_I2C=y
 CONFIG_DM_KEYBOARD=y
 CONFIG_MISC=y
