--- a/configs/hobot_x5_rdk_nand_defconfig
+++ b/configs/hobot_x5_rdk_nand_defconfig
@@ -8,6 +8,7 @@ CONFIG_TARGET_X5=y
 CONFIG_DROBOT_DISABLE_WDT=y
 CONFIG_ENV_SIZE=0x30000
 CONFIG_ENV_OFFSET=0x280000
+CONFIG_ENV_SECT_SIZE=0x20000
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="hobot-x5"
 CONFIG_SYS_PROMPT="Hobot>"
