rdk: x5: autoboot: Feat Change the key to enter uboot command line from any key to the space key to avoid system startup failure due to serial port garbled code
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/configs/hobot_x5_rdk_nand_defconfig
+++ b/configs/hobot_x5_rdk_nand_defconfig
@@ -27,6 +27,9 @@ CONFIG_BOOTSTAGE_RECORD_COUNT=64
 CONFIG_BOOTSTAGE_FDT=y
 CONFIG_BOOTSTAGE_RECORD_BOARD_INIT_F=y
 CONFIG_BOOTSTAGE_RECORD_BOARD_INIT_R=y
+CONFIG_AUTOBOOT_KEYED=y
+CONFIG_AUTOBOOT_PROMPT="Hit <SPACE> key to stop autoboot in %2ds\n"
+CONFIG_AUTOBOOT_STOP_STR=" "
 # CONFIG_USE_BOOTCOMMAND is not set
 CONFIG_USE_PREBOOT=y
 CONFIG_CONSOLE_RECORD=y
