--- a/arch/arm/dts/x5-rdk.dtsi
+++ b/arch/arm/dts/x5-rdk.dtsi
@@ -85,6 +85,7 @@
 			no-1-8-v;
 			no-sdio;
 			sd-socrst;
+			cd-inverted;
 			status = "okay";
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_sd>;
