fix(emmc): enable emmc,so the sd card is mmcblk1
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm/dts/x5-rdk.dtsi
+++ b/arch/arm/dts/x5-rdk.dtsi
@@ -68,7 +68,7 @@
 			disable-wp;
 			// dwcmshc,no-cmd-conflict-check;
 			// dwcmshc,negative-edge-sample;
-			status = "disabled";
+			status = "okay";
 			max-frequency = <50000000>;
 			cap-mmc-highspeed;
 			emmc-socrst;
