--- a/configs/hobot_x5_evb_nand_defconfig
+++ b/configs/hobot_x5_evb_nand_defconfig
@@ -75,7 +75,7 @@ CONFIG_CMD_UBI_RENAME=y
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_OF_CONTROL=y
 CONFIG_ENV_IS_IN_UBI=y
-CONFIG_ENV_UBI_PART="boot"
+CONFIG_ENV_UBI_PART="ubootenv"
 CONFIG_ENV_UBI_VOLUME="ubootenv"
 CONFIG_NET_RETRY_COUNT=20
 CONFIG_NET_RANDOM_ETHADDR=y
