arm: mach-horizon: feat [X5-1498] Support dtb overlay
Summary:
Uboot FIT image supports dts overlay but requires FIT image recompiled each
time a new overlay is added. Provide a mechanism on Sunrise5 SoC to apply fdt
overlay without the need of recompiling FIT image.

Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: I3c1cac501383d6c5a8bc41a65940d44defe41abb

--- a/configs/hobot_x5_evb_nor_defconfig
+++ b/configs/hobot_x5_evb_nor_defconfig
@@ -154,4 +154,5 @@ CONFIG_HOBOT_BOARD_TYPE=y
 CONFIG_HOBOT_ADC_BTYPE=y
 CONFIG_FAT_WRITE=y
 CONFIG_LIBAVB=y
+CONFIG_OF_LIBFDT_OVERLAY=y
 # CONFIG_EFI_LOADER is not set
