--- a/configs/hobot_x5_svb_nand_defconfig
+++ b/configs/hobot_x5_svb_nand_defconfig
@@ -157,4 +157,5 @@ CONFIG_HOBOT_BOARD_TYPE=y
 CONFIG_HOBOT_X5_SVB=y
 CONFIG_FAT_WRITE=y
 CONFIG_LIBAVB=y
+CONFIG_OF_LIBFDT_OVERLAY=y
 # CONFIG_EFI_LOADER is not set
