--- a/arch/arm/dts/x5-soc.dtsi
+++ b/arch/arm/dts/x5-soc.dtsi
@@ -61,7 +61,8 @@
 
 		x5_soc_emmc: sdio-host@35040000 {
 			compatible = "horizon,x5-sdhci";
-			reg = <0x35040000 0x10000>;
+			reg = <0x35040000 0x10000>,
+				  <0x35050064 0x10>;
 			clocks = <&sdclk>;
 			bus-width = <8>;
 			non-removable;
@@ -81,7 +82,8 @@
 
 		x5_soc_sdio_0: sdio-host@35020000 {
 			compatible = "horizon,x5-sdhci";
-			reg = <0x35020000 0x10000>;
+			reg = <0x35020000 0x10000>,
+				  <0x35050078 0x10>;
 			clocks = <&sdclk>;
 			max-frequency = <52000000>;
 			no-1-8-v;
@@ -94,7 +96,8 @@
 
 		x5_soc_sdio_1: sdio-host@35030000 {
 			compatible = "horizon,x5-sdhci";
-			reg = <0x35030000 0x10000>;
+			reg = <0x35030000 0x10000>,
+				  <0x3505008C 0x10>;
 			clocks = <&sdclk>;
 			max-frequency = <52000000>;
 			no-1-8-v;
