mmc: x5_sdhci: fix [X5-1488] Fix emmc tuning logic
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm/dts/x5-rdk.dtsi
+++ b/arch/arm/dts/x5-rdk.dtsi
@@ -79,7 +79,8 @@
 
 		x5_rdk_sdio_0: sdio-host@35020000 {
 			compatible = "horizon,x5-sdhci";
-			reg = <0x35020000 0x10000>;
+			reg = <0x35020000 0x10000>,
+				  <0x35050078 0x10>;
 			clocks = <&sdclk>;
 			max-frequency = <52000000>;
 			no-1-8-v;
@@ -93,7 +94,8 @@
 
 		x5_rdk_sdio_1: sdio-host@35030000 {
 			compatible = "horizon,x5-sdhci";
-			reg = <0x35030000 0x10000>;
+			reg = <0x35030000 0x10000>,
+				  <0x3505008C 0x10>;
 			clocks = <&sdclk>;
 			max-frequency = <52000000>;
 			no-1-8-v;
