feat(X5_RDK_V1.0): Add HOBOT_X5_RDK_V1P0_ID for X5 RDK V1.0
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/drivers/horizon/Kconfig
+++ b/drivers/horizon/Kconfig
@@ -42,6 +42,11 @@ config HOBOT_X5_RDK
 	bool "X5RDK"
 	help
 	  Select this option for Board Type X5 RDK.
+	  
+config HOBOT_X5_RDK_V1P0
+	bool "X5RDK_V1P0"
+	help
+	  Select this option for Board Type X5 RDK V1P0.
 
 endchoice
 
